--- a/.github/workflows/build-in-jenkins.yml
+++ b/.github/workflows/build-in-jenkins.yml
@@ -25,13 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
       - name: Loop until jenkins finishes?
-        run: |
+        shell: |
           echo "sending request to Jenkins"
           DONE='curl https://random-data-api.com/api/beer/random_beer'
           echo $DONE
