--- a/.github/workflows/curl-jenkins-job-status.yml
+++ b/.github/workflows/curl-jenkins-job-status.yml
@@ -34,5 +34,5 @@ jobs:
           JOB_STATUS_URL='http://20.106.205.93:8080/job/fake-server-pipeline/31/'
           
           # running jenkins-job-status.sh script
-          "${GITHUB_WORKSPACE}/.github/scripts/jenkins-job-status.sh ${JOB_STATUS_URL}"
+          bash ${GITHUB_WORKSPACE}/.github/scripts/jenkins-job-status.sh ${JOB_STATUS_URL}
       
