--- a/.github/workflows/curl-jenkins-job-status.yml
+++ b/.github/workflows/curl-jenkins-job-status.yml
@@ -18,6 +18,9 @@ jobs:
   # This workflow contains a single job called "build"
   empty-job:
     runs-on: ubuntu-latest
+    steps:
+      - name: empty-step
+        run: echo "does nothing"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
