--- a/.github/workflows/trigger-jenkins-build.yml
+++ b/.github/workflows/trigger-jenkins-build.yml
@@ -26,13 +26,15 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a set of commands using the runners shell
-      - name: setup python
+      
+      - name: Setup python
         uses: actions/setup-python@v4
         with:
           python-version: 3.8 #install the python needed
-            - name: Install dependencies
-          run: |
-            python3 -m pip install --upgrade pip
+          
+      - name: Install python dependencies
+        run: |
+          python3 -m pip install --upgrade pip
 
       - name: Run python script to trigger build and fetch job number
         run: |
