--- a/.github/workflows/trigger-jenkins-build.yml
+++ b/.github/workflows/trigger-jenkins-build.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Install python dependencies
         run: |
           python3 -m pip install --upgrade pip
+          pip install requests urlparse
 
       - name: Run python script to trigger build and fetch job number
         run: |
