--- a/.github/workflows/trigger-jenkins-build.yml
+++ b/.github/workflows/trigger-jenkins-build.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Trigger Jenkins Build
+name: trigger-jenkins-build
 
 # Controls when the workflow will run
 on:
@@ -15,7 +15,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    name: trigger-jenkins-build
+    name: build-name
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
