--- a/.github/workflows/trigger-jenkins-build.yml
+++ b/.github/workflows/trigger-jenkins-build.yml
@@ -1,12 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
-name: workflow-name
+name: trigger-jenkins-get-number
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "develop" branch
-  push:
-   branches: [ "develop" ]
+  pull_request
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
