--- a/.github/workflows/trigger-jenkins-build.yml
+++ b/.github/workflows/trigger-jenkins-build.yml
@@ -5,7 +5,7 @@ name: trigger-jenkins-get-number
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "develop" branch
-  pull_request
+  pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
