--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,4 @@
     <groupId>org.example</groupId>
     <artifactId>fake-server</artifactId>
     <version>1.0-SNAPSHOT</version>
-</project>
+</project>whooops
